--- a/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
+++ b/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
@@ -15,7 +15,21 @@
 						<form id="filter-form" name="form" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
 							<div class="row">
 								<div class="col-auto">
-									<label class="form-label">Month: </label>
+									<label class="form-label">Search Year / Month</label>
+									<select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
+										<option value="">Year</option>
+										<option value="2020">2020</option>
+										<option value="2021">2021</option>
+										<option value="2022">2022</option>
+										<option value="2023">2023</option>
+										<option value="2024">2024</option>
+										<option value="2025">2025</option>
+										<option value="2026">2026</option>
+									</select>
+								</div>
+								<!-- <div class="col-3"></div> -->
+								<div class="col-auto">
+									<label class="form-label">&nbsp;</label>
 									<select name="user[month]" class="form-select select-month-year p-1" id="inputMonth">
 										<option value="">Month</option>
 										<option value="1">January</option>
@@ -26,24 +40,10 @@
 										<option value="6">June</option>
 										<option value="7">July</option>
 										<option value="8">August</option>
-										<option selected="selected" value="9">September</option>
+										<option value="9">September</option>
 										<option value="10">October</option>
 										<option value="11">November</option>
 										<option value="12">December</option>
-									</select>
-								</div>
-								<!-- <div class="col-3"></div> -->
-								<div class="col-auto">
-									<label class="form-label">Year: </label>
-									<select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
-										<option value="">Year</option>
-										<option value="2020">2020</option>
-										<option value="2021">2021</option>
-										<option value="2022">2022</option>
-										<option value="2023">2023</option>
-										<option selected="selected" value="2024">2024</option>
-										<option value="2025">2025</option>
-										<option value="2026">2026</option>
 									</select>
 								</div>
 								<div class="col-auto">
@@ -729,8 +729,13 @@
         searchButton.addEventListener("click", searchFunction);
 
         $(document).ready(function () {
+        	
+          $("#inputYear").val(gv_year);
+		  $("#inputMonth").val(gv_month);
+		  
           // in the first load, we trigger the search function
           searchFunction();
+          
         });
       });
 
