feat: opnsrv002 page grid logic added

--- a/src/main/resources/templates/views/adm/srv/ADMSRV001M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV001M0.html
@@ -174,7 +174,7 @@
                     <span id="selectedOption" style="font-weight: bold;"> None</span>
                   </div>
                     <div class="card-footer card-footer-transparent">
-                      <button type="button" class="btn btn-outline-secondary w-100" onclick="addOption()">Add</button>
+                      <button type="button" class="btn btn-outline-secondary w-100" onclick="addOption()">Use Option</button>
                     </div>
                   </form>
                   </a>
@@ -451,7 +451,7 @@
     $(document).ready(function () {
       fetchOptionsAndCompare();
     });
-    
+
   </script>
   <script src="js/utils.js"></script>
 </th:block>
